# copilot

./: .coverage  .gitignore  Components_Spec.md  Dependency_Management.md  Dockerfile  Makefile  Project.md  README.md  USER_GUIDE.md  User-Instructions.md  consolidate_docs.sh  fix_linting.py  fix_long_lines.py  fix_raises.py  manifest.json  pyproject.toml  pytest.ini  run_tests.py  test_simple.py
.devcontainer/: .post-create.sh.swp  Dockerfile  azure_init.py  check-azure-mount.sh  devcontainer.env.template  devcontainer.json  entrypoint.sh  post-create.sh  postStart.sh
admin/: README.md  azure_auth.py  azure_setup.py  check_azure_connectivity.py  deploy_components.py  discover_components.py  env_setup.py  manage_manifest.py  test_components.py
common/: __init__.py  adaptors.py  base.py
components/azure_ml/text_processor/: Dockerfile  README.md  environment.yml  metadata.json  pyproject.toml  requirements.txt  text_processor.yaml
components/azure_ml/text_processor/deployment/: deploy.py  parameters.json
components/azure_ml/text_processor/examples/: basic_usage.py  batch_processing.py
components/azure_ml/text_processor/src/: __init__.py  component.py  run.py
components/azure_ml/text_processor/tests/: __init__.py  test_component.py
deploy/: manifest.yaml  run.py
docs/: Azure_Setup.md  Practical_Examples.md
runtime/: __init__.py  azureml_adapter.py  dispatcher.py  function_adapter.py  mcp_adapter.py  rest_adapter.py
scripts/: azure_mount_guide.sh  check_azure.sh  check_azure_mount.sh  configure_azure_dir.sh  manage_dependencies.py
(+105 files in other folders)
