[tool.poetry]
name = "azure-ml-text-processor"
version = "0.1.0"
description = "Text processor component for Azure ML"
authors = ["Your Organization <info@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Component-specific dependencies
nltk = "^3.8.1"
scikit-learn = "^1.3.2"

# Include shared foundry libraries
azure-components-foundry = {path = "../../../", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"